--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "@verida/vault-auth-client",
   "version": "0.1.0",
   "description": "Verida Vault Authentication Client: Facilitates authentication between the browser and Verida Vault",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "preinstall": "npm install --ignore-scripts",
+    "prepublish": "npm run build",
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,33 @@
   "bugs": {
     "url": "https://github.com/verida/vault-auth-client/issues"
   },
-  "homepage": "https://github.com/verida/vault-auth-client#readme"
+  "homepage": "https://github.com/verida/vault-auth-client#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/node": "^7.10.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/polyfill": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "eslint:recommended"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "dependencies": {
+    "@verida/encryption-utils": "^0.2.1",
+    "lodash": "^4.17.20",
+    "qrcode": "^1.4.4"
+  }
 }
