feat:auth library improvement - Added Design for checkbox - Added Persistance login feature using localstorgae - Installed new dependency(store) for storing data in the localstorage #4

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@verida/encryption-utils": "^0.2.1",
     "lodash": "^4.17.20",
-    "qrcode": "^1.4.4"
+    "qrcode": "^1.4.4",
+    "store": "^2.0.12"
   }
 }
