feat:add verida logo in QR code #14

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@verida/encryption-utils": "^0.2.1",
     "lodash": "^4.17.20",
     "qrcode": "^1.4.4",
+    "qrcode-with-logos": "^1.0.3",
     "store": "^2.0.12"
   }
 }
